added dicom image reading with opencv

--- a/MainWindow/CMakeLists.txt
+++ b/MainWindow/CMakeLists.txt
@@ -16,3 +16,36 @@ if(${Qt5_FOUND})
 elseif(!${Qt5_FOUND})
     message("Coudn't find a Qt installation on this computer !")
 endif()
+
+find_package(DCMTK REQUIRED)
+
+if(${DCMTK_FOUND})
+    message("Found DCMTK version : " ${DCMTK_VERSION} " for MainWindow folder !")
+    include_directories(${DCMTK_DIRS})
+    target_link_libraries(MainWindow ${DCMTK_LIBRARIES})
+    message("Linked DCMTK version : " ${DCMTK_VERSION} " for MainWindow folder !")
+elseif(!${DCMTK_FOUND})
+    message("Coudn't find a DCMTK installation on this computer !")
+endif()
+
+find_package(Boost REQUIRED)
+
+if(${Boost_FOUND})
+    message("Found Boost version : " ${Boost_VERSION} " for MainWindow folder !")
+    include_directories( ${Boost_INCLUDE_DIR} )
+    target_link_libraries(MainWindow ${Boost_LIBRARIES} )
+    message("Linked Boost version : " ${Boost_VERSION} " for MainWindow folder !")
+elseif(!${Boost_FOUND})
+    message("Couldn't find a Boost installation on this computer !")
+endif()
+
+find_package(OpenCV REQUIRED)
+
+if(${OpenCV_FOUND})
+    message("Found Opencv version :" ${OpenCV_VERSION} " for MainWindow folder !")
+    include_directories(${OpenCV_INCLUDE_DIRS})
+    target_link_libraries(MainWindow ${OpenCV_LIBS})
+    message("Linked Opencv version :" ${OpenCV_VERSION} " for MainWindow folder !")
+elseif(!${OpenCV_FOUND})
+    message("Couldn't find an OpenCV installation on this computer !")
+endif()
